Paper Mario Items 0.5.0 -- Update notes